[package]

name = "hyper"
version = "0.0.1"
authors = ["Sean McArthur <sean.monstar@gmail.com>"]

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.openssl]
git = "https://github.com/sfackler/rust-openssl"

[dependencies.mime]
git = "https://github.com/hyperium/mime.rs"

[dependencies.unsafe-any]
git = "https://github.com/reem/rust-unsafe-any"

[dependencies.cookie]
git = "https://github.com/alexcrichton/cookie-rs"

[dependencies.time]
git = "https://github.com/rust-lang/time"
